[project]
name = "media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "python-pptx>=1.0.2",
    "setuptools>=82.0.1",
]
